# viki

./: .gitignore  .hgignore  CHANGELOG.md  CONTRIBUTING.md  GRANT.txt  MIT_LICENSE.txt  README.md  VERSION  bumpversion.py  bumpversion_temp_file  config.json  config.xml  configuration.xml  maptypes.xml  module.xml  testcases.html  testcases.md  tinyXML parser_deprecated.url  viki  viki.desktop  viki.desktop.template  viki_env.sh  viki_launch.sh  xml_description_deprecated.md
contrib/DoutzenMSC/: configuration.xml  module.xml
contrib/han-xsens/: CMakeLists.txt  package.xml
contrib/han-xsens/msg/: Xsens_gesture.msg  Xsens_raw.msg
contrib/han-xsens/scripts/: xsens_receiver.py
core/: __init__.py  __main__.py  __main__.py.orig  core.py
core/aero/: __init__.py  __main__.py  config_interpreter.py  config_matcher.py  config_matcher.py.orig  helpers.py  objects.py  scan.py  writeLaunch.py
core/backend/: __init__.py  config_interpreter.py  config_matcher.py  helpers.py  objects.py  scan.py  writeLaunch.py
core/cli/: __init__.py  configuring.py  dependencies.py  repositories.py  runnables.py  viki_config.py
core/gui/: VIKI_main.html  __init__.py  demo.html  demo.xhtml  ipc.js  webgui.py
core/gui/css/: viki.css
core/gui/js/: viki.js
core/newgui/: README.md  bower.json  ember-cli-build.js  package.json  webgui.py
core/newgui/app/: app.js  index.html  router.js
core/newgui/config/: environment.js
core/newgui/tests/: index.html
docs/: Makefile  api.rst  conf.py  contributing.rst  contributor.rst  core.backend.rst  core.cli.rst  core.gui.rst  core.rst  developer.rst  developers.rst  features.rst  flowchart.gliffy  framework_description.rst  howtoconfig.rst  howtomod.rst  index.rst  installation.rst  make.bat  modintroduction.rst  modrepositories.rst  modtaglist.rst  modtutorial.rst  package_guidelines.rst  quickstart.rst  root.md  system_overview.rst  systemoverview.pptx  test.rst  user.rst  userguide.rst  viki_install.sh
docs/_build/doctrees/: api.doctree  commandline.doctree  contributing.doctree  contributor.doctree  core.aero.doctree  core.backend.doctree  core.cli.doctree  core.doctree  core.gui.doctree  developer.doctree  developers.doctree  environment.pickle  features.doctree  framework_description.doctree  index.doctree  installation.doctree  modintroduction.doctree  modrepositories.doctree  modtaglist.doctree  modtutorial.doctree  modules.doctree  package_guidelines.doctree  quickstart.doctree  releasing.doctree  sshdoc.doctree  system_overview.doctree  test.doctree  testjes.doctree  user.doctree
docs/_build/html/: .buildinfo  api.html  commandline.html  contributing.html  contributor.html  core.aero.html  core.backend.html  core.cli.html  core.gui.html  core.html  developer.html  developers.html  features.html  framework_description.html  genindex.html  howtoconfig.html  howtomod.html  index.html  installation.html  modintroduction.html  modrepositories.html  modtaglist.html  modtutorial.html  modules.html  objects.inv  package_guidelines.html  py-modindex.html  quickstart.html  releasing.html  search.html  searchindex.js  sshdoc.html  system_overview.html  test.html  user guide.html  user.html  userguide.html  virtualbox.html
file_templates/: viki.desktop.template  viki_env.sh.template  viki_launch.sh.template
legacy/Utils/Scripts/: bag2csv.sh
legacy/parrot_controller/: CMakeLists.txt  package.xml.rename
legacy/parrot_controller/doc/: controller.md  joystick.md  root.md
legacy/parrot_controller/launch/: battery_protector.launch  controller.launch  controller_module.launch  joystick_module.launch  optitrack_instance.launch  optitrack_instance.yaml  single.launch  single_simulation_with_controller.launch
legacy/parrot_controller/matlab/: circle_d.m  circle_s.m  square_d.m  square_s.m
legacy/parrot_controller/py/: bulk_setpoint_change.glade  controller.glade  controller.py  interface.glade  interface.py
legacy/parrot_controller/src/: controller.cpp  fly_from_joystick.cpp
legacy/parrot_controller_han/: Doxyfile  README.md
legacy/parrot_controller_han/doc/: connecting.md  connector.md  environment.md  keyboard.md
legacy/parrot_controller_han/launch/: ram.yaml
legacy/parrot_controller_han/msg/: gains.msg  nonlinearity.msg
legacy/parrot_controller_han/py/: controller.py  drones.json  interface.py  simControl.py
legacy/parrot_controller_han/src/: battery_protector.cpp  controller.cpp  fly_from_keyboard.cpp  state_estimation.cpp
legacy/ram_tracker_buddy/: CMakeLists.txt  package.xml  readme.md
legacy/ram_tracker_buddy/calibration/: 20140101_drone.txt  20140101_drone.xml  20140401_logitech.xml  20140401_logitech_usbcamnode.txt  20150511_james.txt  20150511_james.xml  20150511_james_detailed.txt  20150511_james_detailed.xml  buildin-hp.txt  logitech.txt  logitech.xml  ost.xml
legacy/ram_tracker_buddy/cfg/: FusionFilter.cfg  RamTrackerBuddyCamPose.cfg
legacy/slam_sensor/: CMakeLists.txt  LICENSE.txt  README.md  README.odt  camera_calibration.yaml  frames.gv  left_camera_low.yaml  package.xml.rename  right_camera_low.yaml
legacy/slam_sensor/launch/: complete.launch  complete_fovis.launch  complete_fovis_elas.launch  complete_fovis_optimal.launch  complete_fovis_optimal_vi.launch  complete_vi.launch  imu.launch  stereo_lowres.launch  usb_calib.launch  usb_highres.launch  usb_lowres.launch  uvc_lowres.launch
legacy/slam_sensor/src/: calibrationParser.cpp  calibrationParser.h  main.cpp
modules/obstacle_avoidance/velocity_obstacle/: CMakeLists.txt  package.xml
modules/obstacle_avoidance/velocity_obstacle/launch/: dummy_publishers.launch
modules/obstacle_avoidance/velocity_obstacle/launch/Gazebosims/: emptyworld_controller_quadcopter.launch  single_simulation.launch  single_testing.launch
modules/obstacle_avoidance/velocity_obstacle/msg/: VO_summary.msg
modules/obstacle_avoidance/velocity_obstacle/src/: VO_controller.cpp  VOplotter.cpp  cmd_vel_remapper.cpp  dummy_publisher.cpp  dummy_setpoint.cpp  pose_remapper.cpp
modules/obstacle_avoidance/velocity_obstacle/worlds/: object.world
modules/rosdefaults/: module.xml
(+136 files in other folders)
